corrected sentence and minimal alignment

--- a/public/styles/indes.css
+++ b/public/styles/indes.css
@@ -42,7 +42,7 @@ body{
 .navbar-childrens,
 .skills-button-group {
     float: right;
-    padding-right: 10px;
+    /* padding-right: 10px; */
 }
 .navbar-childrens>a:hover{
     color: rgb(197, 197, 197);
@@ -83,6 +83,9 @@ body{
         justify-content: center;
         align-items: center;
     } */
+    .navbar-childrens{
+        padding-right: 14px;
+    }
     .section-intro{
         /* display: flex; */
         padding-top: 180px;
@@ -186,6 +189,12 @@ body{
     }
     .skills-card{
         display: flex;
+    }
+    .padding-right-max{
+        padding-right: 10px ;
+    }
+    .padding-right-max-max{
+        padding-right: 20px ;
     }
 }
 
